update all header on all endpoint which has header Auth to Authentication
